--- a/src/components/Pages/MyBranch/BranchInfo.css
+++ b/src/components/Pages/MyBranch/BranchInfo.css
@@ -2,12 +2,15 @@
   color: white !important;
 }
 
-#workingHoursTableWrap thead tr th {
+#workingHoursTableWrap thead tr th,
+#workingHoursCATableWrap thead tr th {
   border: 1px solid rgba(224, 224, 224, 1) !important;
 }
 
 #workingHoursTableWrap tbody tr th,
-#workingHoursTableWrap tbody tr td {
+#workingHoursTableWrap tbody tr td,
+#workingHoursCATableWrap tbody tr th,
+#workingHoursCATableWrap tbody tr td {
   border: 1px solid rgba(224, 224, 224, 1) !important;
 }
 
